src - MTDEV2/objects/P7S1_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Lcm_AutoTestExecError__c</fullName>
        <label>Automated Test Execution Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_ExternalCampaignOppAppRecordTypeID__c</fullName>
        <defaultValue>&quot;0126E0000008YgC&quot;</defaultValue>
        <label>External Campaign Opp App Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_InternalCampaignOppAppRecordTypeID__c</fullName>
        <defaultValue>&quot;0126E0000008Yg7&quot;</defaultValue>
        <label>Internal Campaign Opp App Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AutoTestQueueAsyncId__c</fullName>
        <description>Used in Apex Class &quot;P7S1_AutomatedTestingJob&quot;</description>
        <label>Automated Testing Queue AsynchId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Emp_Serviceweb_DefaultCompID__c</fullName>
        <description>Contains the ID of the default P7S1_Comp__c record.
Used in P7S1_Emp_Serviceweb.</description>
        <label>P7S1_Emp_Serviceweb_DefaultCompID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_SteuerkennzeichenSyncActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Durch diese Checkbox kann der Automatismus der Klasse P7S1_Account_LandSteuerkz aktiviert/deaktiviert werden.</description>
        <inlineHelpText>Durch diese Checkbox kann der Automatismus der Klasse P7S1_Account_LandSteuerkz aktiviert/deaktiviert werden.</inlineHelpText>
        <label>Steuerkennzeichen Sync Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_MediaCampaign_FieldFixierung__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox activated/deactivates the apex validation mediakampagneAuftragFeldfixierung in class Adv_MediaCampaign_FieldValidation</description>
        <label>MediaCampaign Feldfixierung Active</label>
        <type>Checkbox</type>
    </fields>
    <label>P7S1_Settings</label>
</CustomObject>